update readme and fix swagger docs
